<resources>
    <string name="app_name">Quiz10118902</string>
    <string name="logo">Logo</string>
    <string name="digital_together_everyone_achieve_more">Digital Together Everyone Achieve More</string>
    <string name="digiteam">DigiTeam</string>
    <string name="jabar_digital_service">Jabar Digital Service</string>
    <string name="avatar">Avatar</string>
    <string name="name">Dias Eka Fredianto, S.Kom, B.IT</string>
    <string name="job_desk">UI Designer</string>
    <string name="working_time_this_month">Jam Kerja Bulan Ini</string>
    <string name="jam_kerja_kamu_bulan_ini_130_53_jam">Jam kerja kamu bulan ini: 130.53 Jam</string>
    <string name="batas_minimum_jam_kerja_170_jam_bulan">Batas Minimum Jam Kerja 170 jam/bulan</string>
    <string name="checkin">Checkin</string>
    <string name="izin">Izin</string>
    <string name="kehadiran">Kehadiran</string>
    <string name="laporan">Laporan</string>
    <string name="agenda">Agenda</string>
    <string name="booking">Booking</string>
    <string name="wiki">Wiki</string>
    <string name="_130_53_jam">130.53 JAM</string>
    <string name="icon_clock">Icon clock</string>
    <string name="laporan_kamu">Laporan Kamu</string>
    <string name="create_report">Buat Laporan</string>
</resources>